# LMLC2

./: .gitignore  README.md  try  try.cmi  try.ml
LMLCv2/: dune-project  lkkld
LMLCv2/_build/: .db  .digest-db  log
LMLCv2/_build/default/: LMLCv2.dune-package  LMLCv2.install
LMLCv2/_build/default/.dune/: configurator  configurator.v2
LMLCv2/_build/default/lib/: LMLCv2.cma  LMLCv2.cmxa  LMLCv2.cmxs  executor.ml  executor.mli  lMLCv2.ml-gen  lang.ml  lexer.mli  parser.mli  transpiler.ml
LMLCv2/_build/default/lib/.LMLCv2.objs/: lMLCv2__Executor.impl.d  lMLCv2__Executor.intf.all-deps  lMLCv2__Executor.intf.d  lMLCv2__Lang.impl.d  lMLCv2__Lang.intf.d  lMLCv2__Lexer.impl.d  lMLCv2__Parser.intf.d  lMLCv2__Prettyprint.impl.d  lMLCv2__Transpiler.impl.d  lMLCv2__Transpiler.intf.d  lMLCv2__Try.impl.d
LMLCv2/_build/default/lib/.LMLCv2.objs/byte/: lMLCv2.cmi  lMLCv2.cmo  lMLCv2.cmt  lMLCv2__Executor.cmi  lMLCv2__Executor.cmo  lMLCv2__Executor.cmt  lMLCv2__Executor.cmti  lMLCv2__Lang.cmi  lMLCv2__Lang.cmo  lMLCv2__Lang.cmt  lMLCv2__Lang.cmti  lMLCv2__Lexer.cmi  lMLCv2__Lexer.cmo  lMLCv2__Lexer.cmt  lMLCv2__Lexer.cmti  lMLCv2__Parser.cmi  lMLCv2__Parser.cmo  lMLCv2__Parser.cmt  lMLCv2__Parser.cmti  lMLCv2__Prettyprint.cmi  lMLCv2__Prettyprint.cmo  lMLCv2__Prettyprint.cmt  lMLCv2__Transpiler.cmi  lMLCv2__Transpiler.cmo  (+5 more)
LMLCv2/_build/default/lib/.merlin-conf/: lib-LMLCv2
LMLCv2/_build/default/test/: test_LMLCv2.ml
LMLCv2/_build/default/test/.merlin-conf/: exe-test_LMLCv2
LMLCv2/lib/: dune  lang.mli  parser.ml  testwadi.ml  transpiler.mli  try.ml
LMLCv2/test/: dune
(+45 files in other folders)
